添加背景色 外部设置

--- a/lottery/src/main/res/values/attr.xml
+++ b/lottery/src/main/res/values/attr.xml
@@ -11,5 +11,7 @@
         <attr name="lv_luckDataColor" format="color" />
         <!--旋转速度 -->
         <attr name="lv_rotationSpeed" format="integer" />
+        <!--背景颜色 -->
+        <attr name="lv_viewbackcolor" format="color" />
     </declare-styleable>
 </resources>
