--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.xiaoqiang.lottery.lottery.luckView
+            android:id="@+id/luckview"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            app:lv_bordercolor="@color/colorAccent"
+            app:lv_isUnColor="true"
+            app:lv_isUnSize="true"
+            app:lv_luckDataColor="@color/colorAccent"
+            app:lv_rotationSpeed="50"
+            app:lv_viewbackcolor="@color/colorAccent"/>
+
+        <!--中间指针 图片自己随意-->
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:onClick="doClicl"
+            android:src="@mipmap/ic_launcher" />
+    </FrameLayout>
+
 
 </android.support.constraint.ConstraintLayout>
