--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <FrameLayout
@@ -32,5 +33,9 @@
             android:src="@mipmap/ic_launcher" />
     </FrameLayout>
 
+    <com.xiaoqiang.lottery.lottery.loading.LoadingView
+        android:id="@+id/loadingview"
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
